sample/retrieveUnpackaged/objects/Event_Affected_Property__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Event Affected Properties</relationshipLabel>
        <relationshipName>Event_Affected_Areas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SEW_Event__c</fullName>
        <label>SEW Event</label>
        <referenceTo>SEW_Event__c</referenceTo>
        <relationshipName>Affected_Properties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>WSI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WSI</label>
        <referenceTo>WSI__c</referenceTo>
        <relationshipLabel>Event Affected Properties</relationshipLabel>
        <relationshipName>Event_Affected_Properties</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Event Affected Property</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AP-{000000}</displayFormat>
        <label>Affected Properties Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Affected Properties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>